added current week day

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "document-number-formatter",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "Document Number Formatter",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,6 +19,12 @@
     "Bill Number Format",
     "Bill Number",
     "Bill Formatter",
+    "Invoice Number Formatter",
+    "Invoice Number Generator",
+    "Invoice Number Creator",
+    "Invoice Number Format",
+    "Invoice Number",
+    "Invoice Formatter",
     "Number Formatter",
     "Number Generator",
     "Number Creator",
