--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "document-number-formatter",
-  "version": "1.0.27",
+  "version": "1.0.28",
   "description": "Document Number Formatter",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -49,5 +49,13 @@
   },
   "files": [
     "dist/**/*"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/hariprasath-yadav/document-number-formatter/issues"
+  },
+  "homepage": "https://github.com/hariprasath-yadav/document-number-formatter#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hariprasath-yadav/document-number-formatter.git"
+  }
 }
