--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "document-number-formatter",
-  "version": "1.0.28",
+  "version": "1.0.29",
   "description": "Document Number Formatter",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --config jestconfig.json"
   },
   "keywords": [
     "Document Number Formatter",
@@ -35,6 +36,7 @@
   "author": "Hariprasath Yadav",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "babel-eslint": "^10.1.0",
@@ -45,6 +47,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
   "files": [
