--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "rootDir": "./",
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "**/__tests__/*"],
   "include": ["index.ts"]
 }
