--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "document-number-formatter",
-  "version": "1.0.30",
+  "version": "1.0.31",
   "description": "Document Number Formatter",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,23 +13,27 @@
     "Document Number Generator",
     "Document Number Creator",
     "Document Number Format",
+    "Document Number Maker",
     "Document Number",
     "Bill Number Formatter",
     "Bill Number Generator",
     "Bill Number Creator",
     "Bill Number Format",
+    "Bill Number Maker",
     "Bill Number",
     "Bill Formatter",
     "Invoice Number Formatter",
     "Invoice Number Generator",
     "Invoice Number Creator",
     "Invoice Number Format",
+    "Invoice Number Maker",
     "Invoice Number",
     "Invoice Formatter",
     "Number Formatter",
     "Number Generator",
     "Number Creator",
     "Number Format",
+    "Number Maker",
     "Formatter",
     "Format"
   ],
@@ -39,14 +43,11 @@
     "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
-    "babel-eslint": "^10.1.0",
     "eslint": "^7.14.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
